src/objects/Surgical_Notes_Form__c.object
<CustomObject>
    <fields>
        <fullName>ASA__c</fullName>
        <label>ASA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>II</fullName>
                </value>
                <value>
                    <fullName>III</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Surgical Notes Forms</relationshipLabel>
        <relationshipName>Surgical_Notes_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alveolectomy_Amount__c</fullName>
        <label>Alveolectomy Amount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alveolectomy_Leveling__c</fullName>
        <label>Alveolectomy Leveling</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alveolectomy__c</fullName>
        <label>Alveolectomy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ambulating_without_assistance__c</fullName>
        <label>Ambulating without assistance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assistants__c</fullName>
        <description>Names of the assistants that helped with this apt.</description>
        <label>Assistants</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Avoiding_Strenuous_Activity__c</fullName>
        <label>Avoiding Strenuous Activity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMI_Calc__c</fullName>
        <formula>( Weight__c * 0.45) / (( Height_Total_Inches__c * 0.025) * (Height_Total_Inches__c * 0.025))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BMI Calc</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Benadryl__c</fullName>
        <label>Benadryl</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Betadine__c</fullName>
        <label>Betadine Chlorhexidine Prep</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Blade_Num__c</fullName>
        <label>Blade Num</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bone_Graft_Area__c</fullName>
        <label>Bone Graft Area</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bone_Graft_Harvest_Site__c</fullName>
        <label>Bone Graft Harvest Site</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bone_Graft_Material_Multi__c</fullName>
        <label>Bone Graft Material Multi</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Autograft</fullName>
                </value>
                <value>
                    <fullName>Allograft</fullName>
                </value>
                <value>
                    <fullName>Xenograft</fullName>
                </value>
                <value>
                    <fullName>rhBMP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bone_Graft_Material_Note__c</fullName>
        <label>Bone Graft Material Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bone_Graft_Material__c</fullName>
        <label>Bone Graft Material</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Autograft</fullName>
                </value>
                <value>
                    <fullName>Allograft</fullName>
                </value>
                <value>
                    <fullName>Xenograft</fullName>
                </value>
                <value>
                    <fullName>rhBMP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bone_Graft_Type__c</fullName>
        <label>Bone Graft Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Onlay</fullName>
                </value>
                <value>
                    <fullName>Socket preservation</fullName>
                </value>
                <value>
                    <fullName>Sinus lift</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Buccal_cortex_intact__c</fullName>
        <label>Buccal cortex intact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Buccal_hockey_stick__c</fullName>
        <label>Buccal hockey stick</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Carbocaine__c</fullName>
        <label>Carbocaine</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Clinical_Apt_Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clinical Apt Calendar</label>
        <referenceTo>Clinical_Apt_Calendar__c</referenceTo>
        <relationshipLabel>Surgical Notes Forms</relationshipLabel>
        <relationshipName>Surgical_Notes_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clinical_Note_Instance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clinical Note Instance</label>
        <referenceTo>Clinical_Note_Instance__c</referenceTo>
        <relationshipLabel>Surgical Notes Forms</relationshipLabel>
        <relationshipName>Surgical_Notes_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Confirmation_Radiography__c</fullName>
        <label>Confirmation Radiography</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>i-CAT</fullName>
                </value>
                <value>
                    <fullName>Pano</fullName>
                </value>
                <value>
                    <fullName>Periapical</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consent_Accurate_and_Signed__c</fullName>
        <label>Consent Accurate and Signed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Denies_Pregnancy__c</fullName>
        <label>Denies Pregnancy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dexamethasone__c</fullName>
        <label>Dexamethasone</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discussed_Oral_Hygiene__c</fullName>
        <label>Discussed Oral Hygiene</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Emergency_Cart_Ready__c</fullName>
        <label>Emergency Cart Ready</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Envelope__c</fullName>
        <label>Envelope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Extractions__c</fullName>
        <label>Extractions</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fentanyl__c</fullName>
        <label>Fentanyl</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Findings_Complications__c</fullName>
        <label>Findings Complications</label>
        <length>12000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Flap_Design__c</fullName>
        <label>Flap Design</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Height_Feet__c</fullName>
        <label>Height Feet</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Height_Inches__c</fullName>
        <label>Height Inches</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Height_Total_Inches__c</fullName>
        <formula>( Height_Feet__c * 12) + Height_Inches__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Height Total Inches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ibuprofin__c</fullName>
        <label>Ibuprofin</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Icepack_Placed__c</fullName>
        <label>Icepack Placed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Implant_System_Other__c</fullName>
        <label>Implant System Other</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implant_System__c</fullName>
        <label>Implant System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Straumann</fullName>
                </value>
                <value>
                    <fullName>Neodent</fullName>
                </value>
                <value>
                    <fullName>Nobel Biocare</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Implant_Tooth_Position__c</fullName>
        <label>Implant Tooth Position</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implant_Type__c</fullName>
        <label>Implant Type</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impression_material_used__c</fullName>
        <label>Impression material used</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interim_Night_Guard_Delivered__c</fullName>
        <label>Interim Night Guard Delivered</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ketamine__c</fullName>
        <label>Ketamine</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lateral_sinus_corticotomies__c</fullName>
        <label>Lateral sinus corticotomies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lidocaine_50__c</fullName>
        <label>Lidocaine 50</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lidocaine__c</fullName>
        <label>Lidocaine</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lingual_cortex_intact__c</fullName>
        <label>Lingual cortex intact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Local_Anesthetic_Other__c</fullName>
        <label>Local Anesthetic Other</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marcaine__c</fullName>
        <label>Marcaine</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Medical_History_Reviewed__c</fullName>
        <label>Medical History Reviewed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monitors_in_place__c</fullName>
        <label>Monitors in place</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Morphine__c</fullName>
        <label>Morphine</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPO_Confirmed__c</fullName>
        <label>NPO Confirmed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Occlusal_Adjustment__c</fullName>
        <label>Occlusal Adjustment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Patient_Examined_Heart_Lungs__c</fullName>
        <label>Patient Examined</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Placed_seals_using__c</fullName>
        <label>Placed seals using</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Op_BP_Diastolic__c</fullName>
        <label>Post Op BP Diastolic</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Post_Op_BP_Systolic__c</fullName>
        <label>Post Op BP Systolic</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Post_Op_Care_Comments__c</fullName>
        <label>Post Op Care Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Post_Op_General_Condition_Notes__c</fullName>
        <label>Post Op General Condition Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Post_Op_General_Condition__c</fullName>
        <label>Post Op General Condition</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Doing Well</fullName>
                </value>
                <value>
                    <fullName>Fever</fullName>
                </value>
                <value>
                    <fullName>Dizziness</fullName>
                </value>
                <value>
                    <fullName>Pronounced Swelling</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Post_Op_Hematosis__c</fullName>
        <label>Post Op Hematosis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No significant bleeding</fullName>
                </value>
                <value>
                    <fullName>Bleeding controlled</fullName>
                </value>
                <value>
                    <fullName>Persistent bleeding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Post_Op_Instruction_Given__c</fullName>
        <label>Post Op Instruction Given</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Written</fullName>
                </value>
                <value>
                    <fullName>Verbal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Post_Op_Instructions_Reviewed__c</fullName>
        <label>Post Op Instructions Reviewed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Post_Op_Mental_Status_Notes__c</fullName>
        <label>Post Op Mental Status Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Post_Op_Mental_Status__c</fullName>
        <label>Post Op Mental Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Awake/Alert</fullName>
                </value>
                <value>
                    <fullName>Oriented</fullName>
                </value>
                <value>
                    <fullName>Confused</fullName>
                </value>
                <value>
                    <fullName>Drowsy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Post_Op_Oral_Intake__c</fullName>
        <label>Post Op Oral Intake</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tolerating Oral intake</fullName>
                </value>
                <value>
                    <fullName>Nausea without vomiting</fullName>
                </value>
                <value>
                    <fullName>Vomiting (less than 3 episodes)</fullName>
                </value>
                <value>
                    <fullName>Persistent nausea and vomiting</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Post_Op_Pain_Management__c</fullName>
        <label>Post Op Pain Management</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No complaint of pain</fullName>
                </value>
                <value>
                    <fullName>Adequate pain control with meds</fullName>
                </value>
                <value>
                    <fullName>Inadequate pain control</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Post_Op_Pulse_OX__c</fullName>
        <label>Post Op Pulse OX</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Post_Op_Pulse__c</fullName>
        <label>Post Op Pulse</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Post_Operative_Pain_Controlled__c</fullName>
        <label>Post Operative Pain Controlled</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Post_Surgery_Lidocaine__c</fullName>
        <label>Post Surgery Lidocaine</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Post_Surgery_MarCaine__c</fullName>
        <label>Post Surgery Marcaine</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Post_Surgery_Septocaine__c</fullName>
        <label>Post Surgery Septocaine</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Post_operative_bleeding_controlled__c</fullName>
        <label>Post operative bleeding controlled</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Post_operative_nausea__c</fullName>
        <label>Post operative nausea</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pre_Op_BP_Systolic__c</fullName>
        <label>Pre Op BP Systolic</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_Op_Notes__c</fullName>
        <label>Pre Op Notes</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pre_Op_Pulse_Ox__c</fullName>
        <label>Pre Op Pulse Ox</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_Op_Pulse__c</fullName>
        <label>Pre Op Pulse</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_op_medications_given__c</fullName>
        <label>Pre op medications given</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Procedure_Site_Confirmed__c</fullName>
        <label>Procedure Site Confirmed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Procedure_Verified__c</fullName>
        <label>Procedure Verified</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Propofol__c</fullName>
        <label>Propofol</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prosth_Screw_Torque_Value__c</fullName>
        <label>Prosth Screw Torque Value</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Radiographs_Available_and_up_to_date__c</fullName>
        <label>Radiographs Available and up to date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Re_anesthetized__c</fullName>
        <label>Re-anesthetized</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Releasing_Incision__c</fullName>
        <label>Releasing Incision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Responsible_Adult_Driver__c</fullName>
        <label>Responsible Adult Driver</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reviewed_Soft_Food_Diet__c</fullName>
        <label>Reviewed Soft Food Diet</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>STO_Procedure_Consent_Confirmed__c</fullName>
        <label>STO - Procedure &amp; Consent Confirmed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sedation_Other__c</fullName>
        <label>Sedation Other</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sedation_Used__c</fullName>
        <label>Sedation Used</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IV Sedation</fullName>
                </value>
                <value>
                    <fullName>Nitrous Oxide/Oxygen</fullName>
                </value>
                <value>
                    <fullName>Oral Sedation</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Septocaine__c</fullName>
        <label>Septocaine</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sinus_Communication_Left__c</fullName>
        <label>Sinus Communication Left</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sinus_Communication_Notes__c</fullName>
        <label>Sinus Communication Notes</label>
        <type>TextArea</type>
    </fields>
</CustomObject>